<resources>
    <string name="app_name">Chattick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="btn_login_login">Login</string>
    <string name="title_under_login_login">don\'t have an account?</string>
    <string name="register_login">Register now</string>
    <string name="forgot_your_password_login">Forgot your password?</string>

    <string name="name_register">Name</string>
    <string name="title_register">Register Here</string>
    <string name="mobile_number_register">Mobile Number</string>
    <string name="email_register">Email Address</string>
    <string name="password_register">Password</string>
    <string name="btn_register_register">Register now</string>
    <string name="title_under_register_register">are you already registered?</string>
    <string name="login_here_register">Login here</string>

    <string name="your_email_reset_password">Your Email</string>
    <string name="reset_reset_password">Reset</string>
    <string name="description_reset_password">By clicking RESET, you will receive an email to reset your password</string>

    <string name="title_app_start">Chattick</string>
    <string name="btn_login_start">Login</string>
    <string name="btn_register_start">Register</string>


    <string name="username">username</string>
    <string name="status">status</string>
    <string name="profile">Profile</string>
</resources>