<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_login"
        android:maxLines="1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_login"
        android:maxLines="1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/btn_login_login"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_under_login_login"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login"
            android:textStyle="bold"/>

    </LinearLayout>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password_login"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:padding="3dp"
        android:background="@drawable/round_back_white_1000"/>


</LinearLayout >