<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/theme_color_8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="#424242"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/title_register"/>

    <EditText
        android:id="@+id/r_name"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name_register"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/r_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10"
        android:hint="@string/mobile_number_register"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/r_email"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_register"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/r_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/r_passwordConfirmed"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        android:background="@drawable/round_back_white_10"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/r_registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_blue_1000"
        android:onClick="onClickRegisterBtn"
        android:text="@string/btn_register_register"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_under_register_register"/>
        <TextView
            android:id="@+id/r_loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here_register"
            android:layout_marginStart="10dp"
            android:textStyle="bold"/>



    </LinearLayout>
</LinearLayout>