<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:text="@string/title_app_start"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="300dp"
        android:textAllCaps="true"
        android:textColor="#424242"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/round_back_white_1000"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/btn_login_start"
        android:layout_marginBottom="20dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back_blue_1000"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/btn_register_start"
        />






</LinearLayout >